e-stockmarket/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: client-ui-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-ui-service
            port:
              number: 80
